Fix admin bar height on menu toggle on small screens
Adds the margin-top and padding-top properties when admin-bar exists and menu is visible on small screens using javascript.
Also adds margin-top to modal when its active in small screens

--- a/style.css
+++ b/style.css
@@ -3140,6 +3140,16 @@ ul.footer-social li {
 		padding-top: 13.1rem;
 	}
 
+	@media ( max-width: 782px ) {
+		.admin-bar .menu-modal.active {
+			margin-top: 46px;
+		}
+	}
+
+	.admin-bar .menu-modal {
+		margin-top: 32px;
+	}
+
 	.main-menu {
 		left: auto;
 		width: 100%;
